hphp/test/zend/bad/ext/spl/tests/SplDoublyLinkedList_isEmpty_empty-with-parameter.php
<?php
	// Create a new Doubly Linked List
	$dll = new SplDoublyLinkedList();
	
	var_dump($dll->isEmpty("test"));
?>